adding linenumbers and puttin biblio in its own page

--- a/tf.tex
+++ b/tf.tex
@@ -22,7 +22,7 @@
 \date{}
 % document start
 \begin{document}
-%\linenumbers
+\linenumbers
 \maketitle
 
 \begin{abstract}
@@ -487,7 +487,7 @@ Pero entonces, $\tilde{D}=\frac{1}{d} D = \alpha(D(l)) => D=\alpha(d D(l))$
 
 
 
- \section{Referencias}
+ \newpage
   \begin{thebibliography}{1}
   \bibitem[To]{To} Tolimieri, R.   \emph{``Heisenberg manifolds and Theta functions''}, Trans. of the A.M.S Vol 239, 1978. (293-319)
   \bibitem[Th]{Th} Thangavelu, S.  \emph{``Harmonic analisys on Heisenberg nilmanifolds''}, Real analisys and its applications
